--- a/app/src/main/res/layout/activity_deezer.xml
+++ b/app/src/main/res/layout/activity_deezer.xml
@@ -1,44 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/toolbar"/>
+        android:layout_height="wrap_content" />
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:openDrawer="start">
-        <LinearLayout
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <Button
+
+            <TextView
+                android:id="@+id/insert"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Test"
-                android:id="@+id/insert"/>
+                android:gravity="center"
+                android:text="@string/deezer_searchTitle"
+                android:textSize="32dp" />
+
             <EditText
+                android:id="@+id/searchText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/insert"
+                android:drawableRight="@drawable/search"
+                android:hint="@string/deezer_searchTitle"/>
+
+            <Button
+                android:id="@+id/searchButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="hello drawer"/>
-        </LinearLayout>
+                android:layout_below="@id/searchText"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="@string/deezer_searchTitle"/>
+
+            <TextView
+                android:id="@+id/previous_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="100dp"
+                android:gravity="center"
+                android:layout_below="@id/searchButton"
+                android:layout_centerInParent="true"
+                android:text="@string/search_previous"
+                android:textSize="32dp" />
+
+            <TextView
+                android:id="@+id/previous_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_below="@id/previous_title"
+                android:textSize="25dp" />
+        </RelativeLayout>
 
         <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/header_layout"
-            app:menu="@menu/nav_menu"
-            android:id="@+id/nav_view"/>
+            app:menu="@menu/nav_menu" />
 
     </androidx.drawerlayout.widget.DrawerLayout>
 </LinearLayout>
