--- a/app/src/main/res/layout/activity_songs_results.xml
+++ b/app/src/main/res/layout/activity_songs_results.xml
@@ -37,6 +37,16 @@
                 android:gravity="center"
                 android:textSize="28dp" />
 
+            <TextView
+                android:id="@+id/notFound"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:visibility="invisible"
+                android:layout_below="@id/songTitle"
+                android:text="@string/results_notfound"
+                android:textSize="24dp" />
+
             <ListView
                 android:id="@+id/songs"
                 android:layout_width="fill_parent"
