use smaller icons to save resources

--- a/app/src/main/res/menu/soccer_menu.xml
+++ b/app/src/main/res/menu/soccer_menu.xml
@@ -4,21 +4,21 @@
 
     <item
         android:id="@+id/deezer"
-        android:icon="@drawable/deezer"
+        android:icon="@drawable/deezer_small"
         android:orderInCategory="50"
         android:title="@string/root_deezerButton"
         app:showAsAction="always" />  <!-- This uses showAsAction=always, so look at icon= parameter -->
 
     <item
         android:id="@+id/lyric"
-        android:icon="@drawable/lyrics"
+        android:icon="@drawable/lyrics_small"
         android:orderInCategory="200"
         android:title="@string/root_soccerButton"
         app:showAsAction="always" /> <!-- This uses showAsAction=never, so look at title= parameter -->
 
     <item
         android:id="@+id/geo"
-        android:icon="@drawable/world"
+        android:icon="@drawable/world_small"
         android:orderInCategory="100"
         android:title="@string/root_globeButton"
         app:showAsAction="always" />
