--- a/app/src/main/res/menu/geo_menu.xml
+++ b/app/src/main/res/menu/geo_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/deezer"
-        android:icon="@drawable/deezer"
+        android:icon="@drawable/deezer_small"
         android:orderInCategory="50"
         android:title="@string/root_deezerButton"
         app:showAsAction="always" />  <!-- This uses showAsAction=always, so look at icon= parameter -->
